updated about and intro copy

--- a/index.html
+++ b/index.html
@@ -58,12 +58,25 @@
     </header>
 
     <section id="intro" class="landing-page-section">
-      <p data-aos="fade-up" class="lead line-length">I have a breadth of skills from print design to front end development in React JS, but web design and UX are my superpowers!<br><br>Open to freelance, contract or full time opportunities in Portland, OR or remote.</p>
+      <div data-aos="fade-up" class="lead line-length">
+        <p>I am a UX designer in Portland with a focus on product design and an interest in improving collaboration between visual designers, UXers, and developers.</p>
+        <p>I believe empathy should go beyond how we design products -- it should determine how we collaborate with each other!</p>
+      </div>
     </section>
 
     <section id="skills" class="landing-page-section">
       <h2 data-aos="fade-up">Skills</h2>
       <div data-aos="fade-up" class="skills-wrapper restrain-width">
+        <div class="skill-wrapper">
+          <span>UX</span>
+          <ul>
+            <li>User Research</li>
+            <li>Design Strategy</li>
+            <li>Wireframing</li>
+            <li>Prototyping</li>
+            <li>Usability Testing</li>
+          </ul>
+        </div>
         <div class="skill-wrapper">
           <span>Visual Design</span>
           <ul>
@@ -78,16 +91,6 @@
             <li>HTML5, CSS3 & Javascript</li>
             <li>Jquery, React JS & Angular 2</li>
             <li>CSS Preproscessors</li>
-          </ul>
-        </div>
-        <div class="skill-wrapper">
-          <span>UX</span>
-          <ul>
-            <li>User Research</li>
-            <li>Design Strategy</li>
-            <li>Wireframing</li>
-            <li>Prototyping</li>
-            <li>Usability Testing</li>
           </ul>
         </div>
       </div>
@@ -137,13 +140,15 @@
     <!--about section-->
     <section id="about" class="landing-page-section" data-aos="fade-up">
       <h2>About</h2>
-      <div class="about-content restrain-width">
+      <div class="about-content restrain-width line-length">
         <img src="images/about-photo.png" alt="portrait of brendan hanna">
         <div class="about-text">
-          <p class="line-length">Since elementary school, I've always loved to draw.  As a teenager, I caught the skateboarding bug, which became my gateway drug into graffiti and late 90s underground rap music.</p>
-          <p class="line-length">I spent ten years as a barista in Portland's specialty coffee industry while making music on the side, but I grew stagnant and knew I needed more creativity in my life.</p>
-          <p class="line-length">After a series of adventures including a music business internship in LA and a five month stint in code school, I came full circle to my love of visual art, this time incorporating what I learned about development.</p>
-          <p class="line-length">Now I design websites and apps, and when I'm not doing that, I'm generally still doodling, skateboarding, and making rap music! (check that out <a href="http://gepettomusic.com" target="blank">here</a>).</p>
+          <p>My name is Brendan, and I'm from Portland.  I believe that empathy should inform not just the way we design products, but the way we collaborate.</p>
+          <p>Before UX, I worked as a barista in Portland's thriving specialty coffee industry for a decade.  It was in that space that I learned how to work with a team to craft a high-quality product in a fast-paced, customer-facing environment.  Always having been a musician and creative person in general, I naturally enjoy tinkering endlessly in pursuit of giving people a positive emotional experience, whether that's with the perfect cup of coffee or a song that they connect with.</p>
+          <p>After some soul-searching that took me to LA for a music business intership and back to Portland for a code bootcamp, I realized that I am a designer at heart, and set out to solve the challenge of synthesizing all my experiences and passions into a new path.<p>
+          <p>Bringing the same passion for creativity, critical thining and empathy I developed as a musican and barista, I found my niche as a UX designer</p>
+          <p>Now I focus on extending the concept of empathy beyond product and into collaboration, and am passionate about improving the way product designers, visual designers and developers collaborate through design systems.
+          </p>
         </div>
       </div>
     </section>
@@ -153,11 +158,11 @@
       <h2>Contact</h2>
 
       <form action="https://formspree.io/brendanhannadev@gmail.com" method="POST">
-        <div class="input-field">
+        <div class="input-field line-length margin-auto">
           <input id="email" type="email" class="validate" name="email">
           <label for="email">Email</label>
         </div>
-        <div class="input-field">
+        <div class="input-field line-length margin-auto">
           <textarea id="message" class="materialize-textarea" name="message"></textarea>
           <label for="message">Leave a Mess!</label>
         </div>
@@ -169,7 +174,7 @@
     <footer class="light-bg">
       <a href="https://github.com/gepetto503" target="_blank">
       <i class="fa fa-github fa-2x"></i></a>
-      <a href="https://twitter.com/brendanhannadev?lang=en" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+      <a href="https://twitter.com/KoolBrendan?lang=en" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
       <a href="https://www.instagram.com/brendandesignsstuff/" target="blank">
       <i class="fa  fa-2x fa-instagram"></i></a>
     </footer>
