--- a/portfolio.html
+++ b/portfolio.html
@@ -123,7 +123,7 @@
     <footer class="light-bg">
       <a href="https://github.com/gepetto503" target="_blank">
       <i class="fa fa-github fa-2x"></i></a>
-      <a href="https://twitter.com/brendanhannadev?lang=en" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+      <a href="https://twitter.com/KoolBrendan?lang=en" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
       <a href="https://www.instagram.com/brendandesignsstuff/" target="blank">
       <i class="fa  fa-2x fa-instagram"></i></a>
     </footer>
