--- a/showfinder.html
+++ b/showfinder.html
@@ -87,7 +87,7 @@
       </section>
       <section id="prototype">
         <div class="resp-iframe-wrapper">
-          <iframe width="438" height="930" src="//invis.io/2HNWCZQ73QT" frameborder="0" allowfullscreen class="resp-iframe"></iframe>  
+          <iframe width="438" height="930" src="//invis.io/2HNWCZQ73QT" frameborder="0" allowfullscreen class="resp-iframe"></iframe>
         </div>
       </section>
       <section class="light-bg process">
@@ -160,7 +160,7 @@
     <footer class="light-bg">
       <a href="https://github.com/gepetto503" target="_blank">
       <i class="fa fa-github fa-2x"></i></a>
-      <a href="https://twitter.com/brendanhannadev?lang=en" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+      <a href="https://twitter.com/KoolBrendan?lang=en" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
       <a href="https://www.instagram.com/brendandesignsstuff/" target="blank">
       <i class="fa  fa-2x fa-instagram"></i></a>
     </footer>
