changed copy more, hopefully fixed prototype size

--- a/showfinder.html
+++ b/showfinder.html
@@ -86,9 +86,9 @@
         </div>
       </section>
       <section id="prototype">
-        <div class="resp-iframe-wrapper">
-          <iframe width="438" height="930" src="//invis.io/2HNWCZQ73QT" frameborder="0" allowfullscreen class="resp-iframe"></iframe>
-        </div>
+        <!-- <div class="resp-iframe-wrapper"> -->
+          <iframe width="375" height="667" src="https://xd.adobe.com/embed/7c5ec3f5-47bf-40e9-7192-77af3cd0122b-0a6f/" frameborder="0" allowfullscreen></iframe>
+        <!-- </div> -->
       </section>
       <section class="light-bg process">
         <h2>Process</h2>
