fix centering of prototypes, add tapable prototype title

--- a/npo.html
+++ b/npo.html
@@ -90,6 +90,7 @@
         <!--content mobile -->
         <div class="case-study-scrolling-screenshots">
           <div class="resp-iframe-wrapper">
+            <h2>Tapable Prototype</h2>
             <iframe width="438" height="930" src="//invis.io/2HNWCZQ73QT" frameborder="0" allowfullscreen class="resp-iframe"></iframe>
             <!-- <img src="images/npo/npo-1.png" alt="tangerine tablet layout" class="screenshot">
             <img src="images/npo/npo-3.png" alt="tangerine mood board and style guide" class="screenshot">
