--- a/showfinder.html
+++ b/showfinder.html
@@ -86,8 +86,11 @@
         </div>
       </section>
       <section id="prototype">
+        <div class="case-study-paragraph">
+          <h3>Tapable Prototype</h3>
+        </div>
         <div class="resp-iframe-wrapper">
-          <iframe width="375" height="667" src="https://xd.adobe.com/embed/7c5ec3f5-47bf-40e9-7192-77af3cd0122b-0a6f/" frameborder="0" allowfullscreen></iframe>
+          <iframe width="375" height="667" src="https://xd.adobe.com/embed/7c5ec3f5-47bf-40e9-7192-77af3cd0122b-0a6f/" frameborder="0" allowfullscreen class="resp-iframe"></iframe>
         </div>
       </section>
       <section class="light-bg process">
