shorten copy all around

--- a/npo.html
+++ b/npo.html
@@ -75,8 +75,8 @@
         </div>
         <!-- title and prev/back chevrons -->
           <div class="case-study-paragraph">
-            <p>As a student at Epicodus, this low fidelity interactive Invision Prototype was my first forray into digital product design.</p>
-            <p></p>
+            <p>As a student at Epicodus, this low fidelity interactive Invision Prototype was my first foray into product design.  I sketched out user flows and wireframes by hand and then translated them into Sketch artboards, and finally use Invision's Craft plugin to create a low fidelity prototype.</p>
+            <p>This project solidified the basic UX principles that I expanded upon when designing the ShowFinder App.</p>
           </div>
 
       </div><!--end case study left-->
