--- a/showfinder.html
+++ b/showfinder.html
@@ -80,9 +80,9 @@
           <h2>Overview</h2>
           <p>I designed a mobile app that allows users to find local concerts quicker and more easily so they can spend their time enjoying music and building community.</p>
           <h2>The Problem</h2>
-          <p>Because underground concerts (think house shows, low-key bar shows) are not frequently not submitted to mainstream outlets to be listed, music fans looking to check out up-and-coming acts have to check various social media platforms, blogs, mailing lists, weekly papers and venue websites.  This is a huge time-drain, and every time they do it they have to start from scratch -- there’s no single platform they can use to keep track of everything they’re interested in.</p>
+          <p>Music fans looking to see up-and-coming acts in small venues have to check various social media platforms, blogs, mailing lists, weekly papers and venue websites.  There’s no single platform they can use to keep track of everything they’re interested in, which is a huge time drain.</p>
           <h2>The Solution</h2>
-          <p>ShowFinder allows fans to find shows easily by combining listings from conventional music listings with Facebook events and shows published directly by bands in the app.  Users have deep search options such as location, sub-genre and price range to find exactly what they’re after, and they can save favorite bands and venues for easy access later.  This allows them to spend less time and energy looking for a show to go to, and more time enjoying music and building community!</p>
+          <p>ShowFinder offers fans integrate show listings from social media and conventional listings, deep search options, and allows them to save lists of favorite bands and upcoming shows.</p>
         </div>
       </section>
       <section id="prototype">
@@ -107,7 +107,8 @@
       <section id="research">
         <div class="case-study-paragraph">
           <h2>Research</h2>
-          <p>Every product should be a marriage between the needs of the owner and the user, rooted in empathy.  To start out, I set out to find out who these parties are and what they need.</p><p>Treating myself as the stakeholder, I asked myself: What are my goals for this app?  What are my goals for creating tools for the music community in general?  What drives me, and what do I want to get, and provide to music lovers?</p><p>Next, I surveyed music lovers in my circles, asking them about their interests and behaviors in regard to music and community, how they currently find concerts, pain points, and what they’d like this app to provide.</p>
+          <p>Every product should be a marriage between the needs of the owner and the user.  To start out, I set out to find out who these folks are and what they need.</p>
+          <!-- <p>Treating myself as the stakeholder, I asked myself: What are my goals for this app?  What are my goals for creating tools for the music community in general?  What drives me, and what do I want to get, and provide to music lovers?</p><p>Next, I surveyed music lovers in my circles, asking them about their interests and behaviors in regard to music and community, how they currently find concerts, pain points, and what they’d like this app to provide.</p> -->
         </div>
         <div class="case-study-full-width-image">
           <img src="./images/showfinder/research-deliverables-transparent.png" alt="research deliverables">
@@ -115,18 +116,18 @@
       </section>
       <section id="analysis-and-synthesis" class="case-study-paragraph">
         <h2>Analysis & Synthesis</h2>
-        <p>I distilled the insights gained from my user surveys into a User Persona -- someone we can relate to, whose shoes we can walk in as we imagine the solution to their challenges.</p>
+        <p>I distilled the insights gained from my user surveys into a User Persona -- someone whose shoes I can put myself in while creating solutions.</p>
         <img src="./images/showfinder/user-persona.png" alt="user persona" class="constrained-image">
       </section>
 
       <section id="ideation" class="case-study-paragraph">
         <h2>Ideation</h2>
-        <p>Now that I knew who I was designing for and what they needed, I began brainstorming possible solutions for how to tangibly get them there.  Letting my creativity take the wheel, and viewing everything through the eyes of our user persona, I churned out ideas for features and scribbled countless possible user flows and wireframes.</p>
+        <p>Next, I began brainstorming solutions.  Letting my creativity take the wheel, I churned out ideas for features and scribbled countless possible user flows and wireframes.</p>
       </section>
       <section id="interaction-design">
         <div class="case-study-paragraph">
           <h2>Interaction Design</h2>
-          <p>From my piles of possibilities, the dots started to connect and I nailed down a map of the application, with routes the user would take to achieve the primary tasks.  From there, I knew which screens to design and I committed to a layout of each one for the first iteratio.</p>
+          <p>I filtered through these possibilities through the eyes of our user, and mapped out application, with routes the user would take to achieve the primary tasks.  From there, I knew which screens to design.</p>
           <div class="case-study-full-width-image">
             <h3>User Flows</h3>
             <img src="./images/showfinder/user-flows.png" alt="user flows">
@@ -144,13 +145,10 @@
         </div>
       </section>
       <section id="user-testing" class="case-study-paragraph">
-        <h2>User Testing/Next Steps</h2>
-        <p>If I choose to continue developing ShowFinder, the next step will be toconduct user testing sessions in which I observe users attemping to perform different tasks.  I'll take that feedback and use it to improve the app in the next iteration.</p>
-        <p>If you're interested in seeing this app become a reality, please reach out via the contact form!  If there's enough interest, I'll see if I can put together a team to build it!</p>
+        <h2>Next Steps</h2>
+        <p>Let's make this app a reality!  If you're a fan, musician, work in the music industry, or are a developer, let's chat!</p>
+        <a href="index.html#contact" class="waves-effect waves-light btn-large button">Contact</a>
       </section>
-
-
-
 
 
       <section class="to-top-tablet-and-down">
