--- a/style-360.html
+++ b/style-360.html
@@ -76,7 +76,7 @@
         <!-- title and prev/back chevrons -->
           <div class="case-study-paragraph">
             <p>As an intern at SightWorks Digital Products, I was tasked with turning design mockups for a one page scrolling website into a UI built out of responsive React JS components.  In the process, I was also to create a style guide for future designers and developers</p>
-            <p>This process sparked the train of thought that is my main focus as a UX designer today: how can designers and developers collaborate more effectively -- not just by using design systems, but by applying empathy not just to the products we make but to the people we work with?</p>
+            <p>This process sparked one of the questions I'm most interested in today: how can designers and developers collaborate more effectively -- not only by using design systems, but by applying empathy to collaboration?</p>
           </div>
 
       </div><!--end case study left-->
