--- a/tangerine.html
+++ b/tangerine.html
@@ -75,10 +75,9 @@
         </div>
         <!-- title and prev/back chevrons -->
           <div class="case-study-paragraph">
-            <p>This one-day UI design sprint involved designing a responsive landing page (including menu in open and closed states) for a fictional brand.</p>
+            <p>This one-day UI design sprint involved designing a responsive landing page for a fictional brand.</p>
             <p>I chose to do a modern online clothing boutique in the vein of Everlane, so I knew I'd be working with a lot of white space and making room for the product shots do the talking.</p>
             <p>I experimented with different ways of placing elements in a minimal design to create interesting configurations of white space and create eyeflow.  I used strong visual hierarchy, the model's implied motion, and eye contact to influence eyeflow and user behavior.</p>
-            <p>The result is a design that's deceptively simple, letting the user be wowed by the product, feel the spacious calming vibe of the brand, be directed to the CTA, and be able to find all the information they're looking for easily.</p>
           </div>
 
       </div><!--end case study left-->
