--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 
     <section id="intro" class="landing-page-section">
       <div data-aos="fade-up" class="lead line-length">
-        <p>I am a UX designer in Portland with a focus on product design and an interest in improving collaboration between visual designers, UXers, and developers.</p>
-        <p>I believe empathy should go beyond how we design products -- it should determine how we collaborate with each other!</p>
+        <p>UX designer in Portland, passionate about applying empathy beyond product.</p>
       </div>
     </section>
 
@@ -143,12 +142,8 @@
       <div class="about-content restrain-width line-length">
         <img src="images/about-photo.png" alt="portrait of brendan hanna">
         <div class="about-text">
-          <p>My name is Brendan, and I'm from Portland.  I believe that empathy should inform not just the way we design products, but the way we collaborate.</p>
-          <p>Before UX, I worked as a barista in Portland's thriving specialty coffee industry for a decade.  It was in that space that I learned how to work with a team to craft a high-quality product in a fast-paced, customer-facing environment.  Always having been a musician and creative person in general, I naturally enjoy tinkering endlessly in pursuit of giving people a positive emotional experience, whether that's with the perfect cup of coffee or a song that they connect with.</p>
-          <p>After some soul-searching that took me to LA for a music business intership and back to Portland for a code bootcamp, I realized that I am a designer at heart, and set out to solve the challenge of synthesizing all my experiences and passions into a new path.<p>
-          <p>Bringing the same passion for creativity, critical thining and empathy I developed as a musican and barista, I found my niche as a UX designer</p>
-          <p>Now I focus on extending the concept of empathy beyond product and into collaboration, and am passionate about improving the way product designers, visual designers and developers collaborate through design systems.
-          </p>
+          <p>Before product design, I worked as a barista in Portland's thriving specialty coffee industry for a decade.  Always having been a musician and creative person in general, I naturally enjoy tinkering endlessly in pursuit of giving people a positive emotional experience, whether that's with an app that makes their life easier, the perfect cup of coffee or a song that they connect with.</p>
+          <p>Catch me building creative community around town or shoot me an email to work on a project or just meet up for coffee!</p>
         </div>
       </div>
     </section>
