fix broken style 360 images take off hover states on mobile (text should be always visible on mobile) take invision prototype off of mobile maybe take invision prototype off altogether if it won't work - get a new iframe/embed code and see if it changes anything update copy

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <section id="intro" class="landing-page-section">
       <div data-aos="fade-up" class="lead line-length">
-        <p>UX designer in Portland, passionate about applying empathy beyond product.</p>
+        <p>Hi!  I'm Brendan, a designer based in Portland, OR.  I apply user centered design to create beautiful websites and apps that solve business problems for humans.</p>
       </div>
     </section>
 
@@ -142,7 +142,7 @@
       <div class="about-content restrain-width line-length">
         <img src="images/about-photo.png" alt="portrait of brendan hanna">
         <div class="about-text">
-          <p>Before product design, I worked as a barista in Portland's thriving specialty coffee industry for a decade.  Always having been a musician and creative person in general, I naturally enjoy tinkering endlessly in pursuit of giving people a positive emotional experience, whether that's with an app that makes their life easier, the perfect cup of coffee or a song that they connect with.</p>
+          <p>Before product design, I worked as a barista in Portland's thriving specialty coffee industry for a decade.  I've always been a <a href="http://gepettomusic.com" target="_blank">musician</a> and generally creative person, so I naturally enjoy tinkering endlessly in pursuit of giving people a positive emotional experience, whether that's with an app that makes their life easier, the perfect cup of coffee or a song that they connect with.</p>
           <p>Catch me building creative community around town or shoot me an email to work on a project or just meet up for coffee!</p>
         </div>
       </div>
