--- a/npo.html
+++ b/npo.html
@@ -69,6 +69,10 @@
             <div class="case-study-bullets-right">
               <ul>
                 <li><strong>Tech:</strong> Sketch & Invision</li>
+                <li>
+                  <strong>Live Link: </strong>
+                  <a href="https://invis.io/ZCNWCZPH895">Invision Prototype</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -89,14 +93,13 @@
         </div>
         <!--content mobile -->
         <div class="case-study-scrolling-screenshots">
-          <div class="resp-iframe-wrapper">
+          <!-- <div class="resp-iframe-wrapper">
             <h2>Tapable Prototype</h2>
-            <iframe width="438" height="930" src="//invis.io/2HNWCZQ73QT" frameborder="0" allowfullscreen class="resp-iframe"></iframe>
-            <!-- <img src="images/npo/npo-1.png" alt="tangerine tablet layout" class="screenshot">
+            <iframe width="438" height="930" src="//invis.io/2HNWCZQ73QT" frameborder="0" allowfullscreen class="resp-iframe invision-prototype"></iframe>
+          </div> -->
+            <img src="images/npo/npo-1.png" alt="tangerine tablet layout" class="screenshot">
             <img src="images/npo/npo-3.png" alt="tangerine mood board and style guide" class="screenshot">
-            <img src="images/npo/npo-4.png" alt="tangerine desktop layout with menu open" class="screenshot">
-            <img src="images/npo/npo-donator.png" alt="tangerine tablet layout with menu open" class="screenshot"> -->
-          </div>
+            <img src="images/npo/npo-donator.png" alt="tangerine tablet layout with menu open" class="screenshot">
         </div>
         <div class="to-top-tablet-and-down">
           <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
