--- a/style-360.html
+++ b/style-360.html
@@ -102,10 +102,10 @@
         </div>
         <!--content tablet and up -->
         <div class="case-study-scrolling-screenshots display-on-tablet" >
-          <img src="images/style-360/style360-1.png" alt="tangerine tablet layout" class="screenshot">
-          <img src="images/style-360/style360-2.png" alt="tangerine mood board and style guide" class="screenshot">
-          <img src="images/style-360/style360-3.png" alt="tangerine desktop layout with menu open" class="screenshot">
-          <img src="images/style-360/style360-4.png" alt="tangerine tablet layout with menu open" class="screenshot">
+          <img src="images/style-360/style360-1.PNG" alt="style 360 1" class="screenshot">
+          <img src="images/style-360/style360-2.PNG" alt="style 360 2" class="screenshot">
+          <img src="images/style-360/style360-3.PNG" alt="style 360 3" class="screenshot">
+          <img src="images/style-360/style360-4.PNG" alt="style 360 4" class="screenshot">
           <div class="to-top-desktop">
             <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
             <p>top</p>
