remove image darkening overlay on mobile

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <section id="intro" class="landing-page-section">
       <div data-aos="fade-up" class="lead line-length">
-        <p>Hi!  I'm Brendan, a designer based in Portland, OR.  I apply user centered design to create beautiful websites and apps that solve business problems for humans.</p>
+        <p>Hi!  I'm Brendan, a designer based in Portland, OR.  I apply user centered design to create beautiful websites and apps that solve business problems for humans (and human problems for businesses).</p>
       </div>
     </section>
 
@@ -100,20 +100,24 @@
       <h2>WORK</h2>
       <div class="work-gallery">
         <a href="showfinder.html" class="work-thumbnail featured-thumbnail" id="showfinder">
-          <div class="work-thumb-overlay">
-          </div>
+          <div class="work-thumb-overlay"></div>
           <div class="work-thumb-info">
-            <h3>Show Finder</h3>
-            <p>Digital Product Design</p>
+            <div class="work-thumb-info-text">
+              <h3>Show Finder</h3>
+              <p>Digital Product Design</p>
+            </div>
+            <button class="waves-effect waves-light btn-large button view-project-button">View Project</button>
           </div>
         </a>
 
         <a href="tangerine.html" class="work-thumbnail" id="tangerine">
-          <div class="work-thumb-overlay">
-          </div>
+          <div class="work-thumb-overlay"></div>
           <div class="work-thumb-info">
-            <h5>Tangerine</h5>
-            <p>User Interface Design</p>
+            <div class="work-thumb-info-text">
+              <h5>Tangerine</h5>
+              <p>User Interface Design</p>
+            </div>
+            <button class="waves-effect waves-light btn-large button view-project-button">View Project</button>
           </div>
         </a>
 
@@ -121,16 +125,22 @@
           <div class="work-thumb-overlay">
           </div>
           <div class="work-thumb-info">
-            <h5>Non Profit Donator</h5>
-            <p>Low Fidelity Prototype</p>
+            <div class="work-thumb-info-text">
+              <h5>Non Profit Donator</h5>
+              <p>Low Fidelity Prototype</p>
+            </div>
+            <button class="waves-effect waves-light btn-large button view-project-button">View Project</button>
           </div>
         </a>
         <a href="style-360.html" class="work-thumbnail" id="style360">
           <div class="work-thumb-overlay">
           </div>
           <div class="work-thumb-info">
-            <h5>Style 360</h5>
-            <p>React JS Development</p>
+            <div class="work-thumb-info-text">
+              <h5>Style 360</h5>
+              <p>React JS Development</p>
+            </div>
+            <button class="waves-effect waves-light btn-large button view-project-button">View Project</button>
           </div>
         </a>
       </div>
